--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/assoc
+spring.datasource.url = jdbc:mysql://localhost:3306/assoc?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #http://localhost/phpmyadmin/db_structure.php?server=1&db=jpa?useSSL=false
 
 # Username and password
