--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,12 +45,18 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
-		<dependency> 
+
+<dependency> 
     <groupId>org.springframework</groupId> 
     <artifactId>spring-webmvc</artifactId> 
     <version>${spring.version}</version> 
 </dependency> 
+
+<dependency>
+	<groupId>javax.servlet</groupId>
+	<artifactId>servlet-api</artifactId>
+	<version>2.5</version>
+</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
