--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.jpa.show-sql = true
 # schema will be automatically updated accordingly to java entities found in
 # the project
 #spring.jpa.hibernate.ddl-auto = update
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.main.banner-mode = off
 # Naming strategy
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
