--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+<dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+    <version>2.0.0.Final</version>
+</dependency>
 <dependency> 
     <groupId>org.springframework</groupId> 
     <artifactId>spring-webmvc</artifactId> 
