--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,9 @@ spring.main.banner-mode = off
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+multipart.maxFileSize=10000KB
+multipart.maxRequestSize=10000KB
+dir.images=C:/xampp/htdocs/images/
 
 
 
